ignore duplicate matching